--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,7 +1,6 @@
 {
 	"itemGroup.mubble.costumes": "Kostuums",
 	"itemGroup.mubble.instruments": "Instrumenten",
-
 	"block.mubble.red_christmas_bauble": "Rode kerstbal",
 	"block.mubble.orange_christmas_bauble": "Orange kerstbal",
 	"block.mubble.yellow_christmas_bauble": "Gele kerstbal",
@@ -12,11 +11,9 @@
 	"block.mubble.light_blue_christmas_bauble": "Lichtblauwe kerstbal",
 	"block.mubble.green_christmas_bauble": "Groene kerstbal",
 	"block.mubble.white_christmas_bauble": "Witte kerstbal",
-
 	"block.mubble.red_shiny_garland": "Rode glanzende slinger",
 	"block.mubble.silver_shiny_garland": "Zilvere glanzende slinger",
 	"block.mubble.gold_shiny_garland": "Goude glanzende slinger",
-
 	"block.mubble.white_present": "Wit cadeau",
 	"block.mubble.black_present": "Zwart cadeau",
 	"block.mubble.blue_present": "Blauw cadeau",
@@ -25,9 +22,7 @@
 	"block.mubble.red_present": "Rood cadeau",
 	"block.mubble.purple_present": "Paars cadeau",
 	"block.mubble.golden_present": "Goud cadeau",
-
 	"block.mubble.footblock": "Voetblok",
-
 	"block.mubble.blue_cloud_block": "Blauwewolkblok",
 	"block.mubble.light_blue_cloud_block": "Lichtblauwewolkblok",
 	"block.mubble.cyan_cloud_block": "Turquoisewolkblok",
@@ -44,10 +39,8 @@
 	"block.mubble.light_gray_cloud_block": "Lichtgrijzewolkblok",
 	"block.mubble.gray_cloud_block": "Grijzewolkblok",
 	"block.mubble.black_cloud_block": "Zwartewolkblok",
-
 	"block.mubble.chocolate_cake": "Chocolade taart",
 	"block.mubble.minecraft_10th_anniversary_cake": "Minecraft's tiende jubileum's taart",
-
 	"block.mubble.blue_balloon": "Blauwe ballon",
 	"block.mubble.light_blue_balloon": "Lichtblauwe ballon",
 	"block.mubble.cyan_balloon": "Turquoise ballon",
@@ -64,11 +57,9 @@
 	"block.mubble.light_gray_balloon": "Lichtgrijze ballon",
 	"block.mubble.gray_balloon": "Grijze ballon",
 	"block.mubble.black_balloon": "Zwarte ballon",
-
 	"block.mubble.unstable_stone": "Unstabiel steen",
 	"block.mubble.placer": "Plaatser",
 	"block.mubble.timeswap_table": "Tijdwisselstafel",
-
 	"block.mubble.smb_question_block": "?-blok (SMB)",
 	"block.mubble.smb3_question_block": "?-blok (SMB3)",
 	"block.mubble.smw_question_block": "?-blok (SMW)",
@@ -169,15 +160,12 @@
 	"block.mubble.smb3_key_door": "Sleutel deur (SMB3)",
 	"block.mubble.smw_key_door": "Sleutel deur (SMW)",
 	"block.mubble.nsmbu_key_door": "Sleutel deur (NSMBU)",
-
 	"block.mubble.fire_flower": "Vuur bloem",
 	"block.mubble.ice_flower": "IJs bloem",
 	"block.mubble.boomerang_flower": "Boomerang bloem",
 	"block.mubble.cloud_flower": "Wolk bloem",
 	"block.mubble.gold_flower": "Gouden Bloem",
-
 	"block.mubble.kirby_block": "Kirby blok",
-
 	"block.mubble.blue_tetris_block": "Blauw Tetris blok",
 	"block.mubble.light_blue_tetris_block": "Lichtblauw Tetris blok",
 	"block.mubble.cyan_tetris_block": "Turquoise Tetris blok",
@@ -198,15 +186,12 @@
 	"block.mubble.japanese_tetris_cushion": "Japans Tetris kussen",
 	"block.mubble.rainbow_tetris_scaffolding": "Regenboog Tetris steiger",
 	"block.mubble.monochrome_tetris_scaffolding": "Zwart-witte Tetris steiger",
-
 	"block.mubble.vampire_stone": "Vampiersteen",
-
 	"block.mubble.medusa_stone": "Medusa's steen",
 	"block.mubble.medusa_bricks": "Medusa's blokstenen",
 	"block.mubble.medusa_brick_stairs": "Medusa's blokstenen trap",
 	"block.mubble.medusa_brick_slab": "Medusa's blokstenen plaat",
 	"block.mubble.medusa_brick_wall": "Medusa's blokstenen muur",
-
 	"block.mubble.blue_candy_cane_pillar": "Blauwe zuurstokpillaar",
 	"block.mubble.light_blue_candy_cane_pillar": "Lichtblauwe zuurstokpillaar",
 	"block.mubble.cyan_candy_cane_pillar": "Turquoise zuurstokpillaar",
@@ -223,13 +208,11 @@
 	"block.mubble.light_gray_candy_cane_pillar": "Lichtgrijze zuurstokpillaar",
 	"block.mubble.gray_candy_cane_pillar": "Grijze zuurstokpillaar",
 	"block.mubble.black_candy_cane_pillar": "Zwarte zuurstokpillaar",
-
 	"block.mubble.green_hill_grass_block": "Groeneheuvel grasblok",
 	"block.mubble.green_hill_dirt": "Groeneheuvel aarde",
 	"block.mubble.marble_zone_stone": "Marblezone steen",
 	"block.mubble.yellow_studiopolis_clapper": "Gele studiopolisklepel",
 	"block.mubble.blue_studiopolis_clapper": "Blauwe studiopolisklepel",
-
 	"block.mubble.press_garden_planks": "Perstuinplanken",
 	"block.mubble.pink_press_garden_sapling": "Roze perstuin kiemplant",
 	"block.mubble.red_press_garden_sapling": "Rode perstuin kiemplant",
@@ -252,9 +235,7 @@
 	"block.mubble.press_garden_wood_stairs": "Perstuin houten trap",
 	"block.mubble.press_garden_wood_slab": "Perstuin houten plaat",
 	"block.mubble.press_garden_wood_button": "Perstuin houten knop",
-
 	"block.mubble.spring": "Veer",
-
 	"block.mubble.scarlet_planks": "Scharlakehouten planken",
 	"block.mubble.scarlet_sapling": "Scharlakekiemplant",
 	"block.mubble.scarlet_log": "Scharlakeboomstam",
@@ -276,25 +257,20 @@
 	"block.mubble.scarlet_wood_button": "Scharlakehouten knop",
 	"block.mubble.scarlet_mushroom": "Scharlake paddenstoel",
 	"block.mubble.scarlet_orchid": "Scharlake orchidee",
-
 	"block.mubble.girder": "Stalenbalk",
-
 	"block.mubble.mirror_temple_bricks": "Spiegeltempel bakstenen",
 	"block.mubble.mirror_temple_brick_stairs": "Spiegeltempel bakstenen trap",
 	"block.mubble.mirror_temple_brick_slab": "Spiegeltempel bakstenen plaat",
 	"block.mubble.mirror_temple_brick_wall": "Spiegeltempel bakstenen muur",
-
 	"block.mubble.old_site_bricks": "Oude bouwstenen",
 	"block.mubble.old_site_brick_stairs": "Oude bouwstenen trap",
 	"block.mubble.old_site_brick_slab": "Oude bouwstenen plaat",
 	"block.mubble.old_site_brick_wall": "Oude bouwstenen muur",
-
 	"block.mubble.elder_pebbles": "Oudere keizels",
 	"block.mubble.dream_block": "Droom blok",
 	"block.mubble.dream_bedrock": "Droom bodemsteen",
-
 	"block.mubble.blue_puyo": "Blauwe puyo",
-	"block.mubble.cyan_puyo": "Turquoise puyo",
+	"block.mubble.turquoise_puyo": "Turquoise puyo",
 	"block.mubble.green_puyo": "Groene puyo",
 	"block.mubble.yellow_puyo": "Gele puyo",
 	"block.mubble.red_puyo": "Rode puyo",
@@ -304,10 +280,8 @@
 	"block.mubble.point_puyo": "Punt puyo",
 	"block.mubble.hard_puyo": "Harde puyo",
 	"block.mubble.iron_puyo": "IJzere puyo",
-
 	"block.mubble.koretato_block": "Koretato-blok",
 	"block.mubble.potato_flower": "Aardappelbloem",
-
 	"block.mubble.potted_fire_flower": "Gepotte vuur bloem",
 	"block.mubble.potted_ice_flower": "Gepotte ijs bloem",
 	"block.mubble.potted_boomerang_flower": "Gepotte boomerang bloem",
@@ -319,8 +293,7 @@
 	"block.mubble.potted_scarlet_mushroom": "Gepotte scharlake paddenstoel",
 	"block.mubble.potted_scarlet_orchid": "Gepotte scharlake orchidee",
 	"block.mubble.potted_potato_flower": "Gepotte aardappelbloem",
-
-	"item.mubble.baguette": "Baguette",
+	"item.mubble.baguette": "Stokbrood",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.caramel_cube": "Karamel kubus",
 	"item.mubble.crepe": "Crêpe",
@@ -333,7 +306,6 @@
 	"item.mubble.jingle_bells": "Jingle bellen",
 	"item.mubble.small_bulb": "Kleine lamp",
 	"item.mubble.totem_of_ascending": "Totem der opstijging",
-
 	"item.mubble.super_mushroom": "Super paddenstoel",
 	"item.mubble.peach": "Perzik",
 	"item.mubble.fireball": "Vuurbal",
@@ -348,11 +320,8 @@
 	"item.mubble.smb3_key": "Sleutel (SMB3)",
 	"item.mubble.smw_key": "Sleutel (SMW)",
 	"item.mubble.nsmbu_key": "Sleutel (NSMBU)",
-
 	"item.mubble.kirby_ball": "Kirby bal",
-
 	"item.mubble.smash_ball": "Smash bal",
-
 	"item.mubble.white_lightsaber": "Wit lichtzwaard",
 	"item.mubble.light_gray_lightsaber": "Lichtgrijs lichtzwaard",
 	"item.mubble.gray_lightsaber": "Grijs lichtzwaard",
@@ -369,13 +338,10 @@
 	"item.mubble.purple_lightsaber": "Paars lichtzwaard",
 	"item.mubble.magenta_lightsaber": "Magenta lichtzwaard",
 	"item.mubble.pink_lightsaber": "Roze lichtzwaard",
-
 	"item.mubble.chincho_spawn_egg": "Chinchospawnei",
 	"item.mubble.goomba_spawn_egg": "Goombaspawnei",
 	"item.mubble.toad_spawn_egg": "Toadspawnei",
-
 	"item.mubble.headphones": "Koptelefoon",
-
 	"item.mubble.white_virtual_googles": "witte virtuele bril",
 	"item.mubble.light_gray_virtual_googles": "Lichtgrijze virtuele bril",
 	"item.mubble.gray_virtual_googles": "Grijze virtuele bril",
@@ -392,9 +358,7 @@
 	"item.mubble.purple_virtual_googles": "Paarse virtuele bril",
 	"item.mubble.magenta_virtual_googles": "Magenta virtuele bril",
 	"item.mubble.pink_virtual_googles": "Roze virtuele bril",
-
 	"item.mubble.christmas_hat": "Kerstmuts",
-
 	"item.mubble.cappy": "Cappy",
 	"item.mubble.luigi_cap": "Luigi's pet",
 	"item.mubble.wario_cap": "Wario's pet",
@@ -412,30 +376,20 @@
 	"item.mubble.mario_wedding_hat": "Mario's trouwdag hoed",
 	"item.mubble.boo_hat": "Boo hoed",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's hoofd",
-
 	"item.mubble.bandana": "Bandana",
-
 	"item.mubble.pikachu_ears": "Pikachu ooren",
 	"item.mubble.snorlax_hat": "Snorlax hoed",
-
 	"item.mubble.top_hat": "Hoge hoed",
-
 	"item.mubble.ralsei_hat": "Ralsei's hoed",
 	"item.mubble.king_round_mask": "Koning rond masker",
-
 	"item.mubble.kid_hat": "Kind's hoed",
-
 	"item.mubble.baldi_head": "Baldi's hoofd",
-
 	"item.mubble.guardian_mask": "Bewaker's masker",
-
 	"item.mubble.mayro_cap": "Mayro's pet",
 	"item.mubble.noteblock_head": "NoteBlock's hoofd",
-
 	"container.mubble.placer": "Plaatser",
 	"container.mubble.timeswap_table": "Tijdwisselstafel",
 	"container.mubble.present": "Cadeau",
-
 	"entity.mubble.custom_tnt": "Aangepaste TNT",
 	"entity.mubble.flying_block": "Vliegend blok",
 	"entity.mubble.chincho": "Chincho",
@@ -447,7 +401,7 @@
 	"entity.mubble.toad.species.black": "Zwarte Toad",
 	"entity.mubble.toad.species.brown": "Bruine Toad",
 	"entity.mubble.toad.species.red": "Rode Toad",
-	"entity.mubble.toad.species.orange": "Orange Toad",
+	"entity.mubble.toad.species.orange": "Oranje Toad",
 	"entity.mubble.toad.species.yellow": "Gele Toad",
 	"entity.mubble.toad.species.lime": "Lichtgroene Toad",
 	"entity.mubble.toad.species.green": "Groene Toad",
@@ -467,10 +421,8 @@
 	"entity.mubble.fireball": "Vuurbal",
 	"entity.mubble.iceball": "IJsbal",
 	"entity.mubble.kirby_ball": "Kirby bal",
-
 	"biome.mubble.press_garden": "Perstuin",
 	"biome.mubble.scarlet_forest": "Scharlake bos",
-
 	"subtitles.mubble.block.question_block.loot.power_up": "?-blok laat power up vallen",
 	"subtitles.mubble.block.question_block.loot.coin": "?-blok laat munt vallen",
 	"subtitles.mubble.block.note_block.jump": "Nootblock wordt gebruikt",
@@ -496,7 +448,6 @@
 	"subtitles.mubble.entity.toad.ambient": "Toad mompelt",
 	"subtitles.mubble.entity.toad.hurt": "Toad heeft pijn",
 	"subtitles.mubble.entity.toad.death": "Toad sterft",
-
 	"advancements.mubble.root.title": "Mubble",
 	"advancements.mubble.root.description": "Een grandioos nieuw avontuur",
 	"advancements.mubble.get_coin.title": "Het is van mij! Goud!",
@@ -513,13 +464,15 @@
 	"advancements.mubble.get_timeswap_table.description": "Maak een tijdwisselstafel",
 	"advancements.mubble.get_tetris_block.title": "Het is allemaal verbonden",
 	"advancements.mubble.get_tetris_block.description": "Krijg je handen aan een Tetris blok",
-
 	"stat.mubble.inspect_placer": "Plaaatsers doorzocht",
 	"stat.mubble.interact_with_timeswap_table": "Interacties met tijdwisselstafel",
 	"stat.mubble.open_present": "Cadeaus geopend",
 	"stat.mubble.talked_to_toad": "Met Toads gepraat",
-
 	"item.mubble.bandana.secret_status": "Dat is voor jou, §6Pixel§r!",
 	"item.mubble.noteblock_head.secret_status": "Hey! Ik dacht dat je dit al op je hoofd had, §6Evan§r!",
-	"item.mubble.mayro_cap.secret_status": "Kom op, jij bent de laatste die dit nodig heeft, of niet, \"§6Sossie§r\"?"
+	"item.mubble.mayro_cap.secret_status": "Kom op, jij bent de laatste die dit nodig heeft, of niet, \"§6Sossie§r\"?",
+	"text.autoconfig.mubble.title": "Mubble configuratie",
+	"text.autoconfig.mubble.category.biomes": "Klimaten",
+	"text.autoconfig.mubble.option.biomes.press_garden": "Genereer perstuin",
+	"text.autoconfig.mubble.option.biomes.scarlet_forest": "Genereer scharlake bos"
 }
