Work on Trinket intergration

--- a/src/main/resources/assets/mubble/lang/ru_ru.json
+++ b/src/main/resources/assets/mubble/lang/ru_ru.json
@@ -1,3 +1,54 @@
 {
+	"itemGroup.mubble.costumes": "Костюмы",
+	"itemGroup.mubble.instruments": "Инструменты",
+	"block.mubble.red_christmas_bauble": "Красная рождественская безделушка",
+	"block.mubble.orange_christmas_bauble": "Оранжевая рождественская безделушка",
+	"block.mubble.yellow_christmas_bauble": "Желтая рождественская безделушка",
+	"block.mubble.purple_christmas_bauble": "Фиолтеовая рождественская безделушка",
+	"block.mubble.magenta_christmas_bauble": "Пурпурная рождественская безделушка",
+	"block.mubble.pink_christmas_bauble": "Розовая рождественская безделушка",
+	"block.mubble.blue_christmas_bauble": "Синяя рождественская безделушка",
+	"block.mubble.light_blue_christmas_bauble": "Голубая рождественская безделушка",
+	"block.mubble.green_christmas_bauble": "Зелёная рождественская безделушка",
+	"block.mubble.white_christmas_bauble": "Белая рождественская безделушка",
+	"block.mubble.red_shiny_garland": "Красная блестящая гирлянда",
+	"block.mubble.silver_shiny_garland": "Серебрянная блестящая гирлянда",
+	"block.mubble.gold_shiny_garland": "Золотая блестящая гирлянда",
+	"block.mubble.white_present": "Белый подарок",
+	"block.mubble.black_present": "Черный подарок",
+	"block.mubble.blue_present": "Синий подарок",
+	"block.mubble.green_present": "Зеленый подарок",
+	"block.mubble.yellow_present": "Желтый подарок",
+	"block.mubble.red_present": "Красный подарок",
+	"block.mubble.purple_present": "Фиолетовый подарок",
+	"block.mubble.golden_present": "Золотой подарок",
+	"block.mubble.footblock": "Блокнот",
+	"block.mubble.blue_cloud_block": "Синий облачный блок",
+	"block.mubble.light_blue_cloud_block": "Голубой облачный блок",
+	"block.mubble.cyan_cloud_block": "Циановый облачный блок",
+	"block.mubble.green_cloud_block": "Зеленый облачный блок",
+	"block.mubble.lime_cloud_block": "Лаймовый облачный блок",
+	"block.mubble.yellow_cloud_block": "Желтый облачный блок",
+	"block.mubble.orange_cloud_block": "Оранжевый облачный блок",
+	"block.mubble.red_cloud_block": "Красный облачный блок",
+	"block.mubble.pink_cloud_block": "Розовый облачный блок",
+	"block.mubble.magenta_cloud_block": "Пурпурный облачный блок",
+	"block.mubble.purple_cloud_block": "Фиолетовый облачный блок",
+	"block.mubble.brown_cloud_block": "Коричневый облачный блок",
+	"block.mubble.white_cloud_block": "Белый облачный блок",
+	"block.mubble.light_gray_cloud_block": "Ярко серый облачный блок",
+	"block.mubble.gray_cloud_block": "Серый облачный блок",
+	"block.mubble.black_cloud_block": "Черный облачный блок",
+	"block.mubble.chocolate_cake": "Шоколадный торт",
+	"block.mubble.minecraft_10th_anniversary_cake": "\"10 лет Майнкрафту\" торт",
+	"block.mubble.blue_balloon": "Синий шар",
+	"block.mubble.light_blue_balloon": "Ярко синий шар",
+	"block.mubble.cyan_balloon": "Циановый шар",
+	"block.mubble.green_balloon": "Зеленый шар",
+	"block.mubble.lime_balloon": "Лаймовый шар",
+	"block.mubble.yellow_balloon": "Желтый шар",
+	"block.mubble.orange_balloon": "Оранжевый шар",
+	"block.mubble.red_balloon": "Красный шар",
+	"block.mubble.light_block": "Яркий блок",
 	"entity.mubble.goomba": "Гумба"
 }
