Added Propeller Box

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -410,6 +410,7 @@
 	"item.mubble.rosalina_crown": "Rosalina's Crown",
 	"item.mubble.pink_gold_peach_crown": "Pink Gold Peach's Crown",
 	"item.mubble.super_crown": "Super Crown",
+	"item.mubble.propeller_box": "Propeller Box",
 	"item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
 	"item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's Head",
