Rename Empty Block
Co-Authored-By: Napero <69263168+Napero@users.noreply.github.com>

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -4,5 +4,5 @@
   "item_group.mubble.super_mario": "Super Mario",
 
   "block.mubble.question_block": "? Block",
-  "block.mubble.empty_question_block": "Empty ? Block"
+  "block.mubble.empty_block": "Empty Block"
 }
