Add bumped blocks

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -6,5 +6,6 @@
   "block.mubble.question_block": "? Block",
   "block.mubble.empty_block": "Empty Block",
   "block.mubble.brick_block": "Brick Block",
-  "block.mubble.gold_block": "Gold Block"
+  "block.mubble.gold_block": "Gold Block",
+  "block.mubble.bumped_block": "Bumped Block"
 }
